Made some stuff work

--- a/restaurants_list.html
+++ b/restaurants_list.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style/restaurant_style.css">
 	</head>
+	<body>
+		<div class="buttons">
+			<button class="restaurant_button">
+				<div class="button_text">
+					<img src="images/Placeholder.png" height="40" width="60">
+				</div>
+				<div class="button_text">
+					<p>Restaurant 1</p>
+				</div>
+				<div class="rounded_square">
+					9.3
+				</div>	
+			</button>
+		</div>
+	</body>
 </html>
