--- a/restaurants_list.html
+++ b/restaurants_list.html
@@ -5,17 +5,76 @@
 	</head>
 	<body>
 		<div class="buttons">
-			<button class="restaurant_button">
-				<div class="button_text">
-					<img src="images/Placeholder.png" height="40" width="60">
+			<div class="restaurant_button">
+				<div class="left">
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_name">RESTAURANT 1</div>
 				</div>
-				<div class="button_text">
-					<p>Restaurant 1</p>
+				<div class="right">
+					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
+					<div class="restaurant_review">4.5</div>
 				</div>
-				<div class="rounded_square">
-					9.3
-				</div>	
-			</button>
+			</div>
+			<div class="restaurant_button">
+				<div class="left">
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_name">RESTAURANT 2</div>
+				</div>
+				<div class="right">
+					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
+					<div class="restaurant_review">4.9</div>
+				</div>
+			</div>
+			<div class="restaurant_button">
+				<div class="left">
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_name">RESTAURANT 3</div>
+				</div>
+				<div class="right">
+					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
+					<div class="restaurant_review">4.1</div>
+				</div>
+			</div>
+			<div class="restaurant_button">
+				<div class="left">
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_name">RESTAURANT 4</div>
+				</div>
+				<div class="right">
+					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
+					<div class="restaurant_review">4.2</div>
+				</div>
+			</div>
+			<div class="restaurant_button">
+				<div class="left">
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_name">RESTAURANT 5</div>
+				</div>
+				<div class="right">
+					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
+					<div class="restaurant_review">4.8</div>
+				</div>
+			</div>
+			<div class="restaurant_button">
+				<div class="left">
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_name">RESTAURANT 6</div>
+				</div>
+				<div class="right">
+					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
+					<div class="restaurant_review">3.7</div>
+				</div>
+			</div>
+			<div class="restaurant_button">
+				<div class="left">
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_name">RESTAURANT 7</div>
+				</div>
+				<div class="right">
+					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
+					<div class="restaurant_review">2.5</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
