Fixed restaurants list page

--- a/restaurants_list.html
+++ b/restaurants_list.html
@@ -2,10 +2,12 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style/restaurant_style.css">
+		<title>Restaurant List</title>
 	</head>
 	<body>
+		<div class="page_title">Restaurant List</div>
 		<div class="buttons">
-			<div class="restaurant_button">
+			<button class="restaurant_button">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
@@ -14,8 +16,8 @@
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.5</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
 					<div class="restaurant_name">RESTAURANT 2</div>
@@ -24,8 +26,8 @@
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.9</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
 					<div class="restaurant_name">RESTAURANT 3</div>
@@ -34,7 +36,7 @@
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.1</div>
 				</div>
-			</div>
+			</button>
 			<div class="restaurant_button">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
