--- a/restaurants_list.html
+++ b/restaurants_list.html
@@ -9,7 +9,7 @@
 		<div class="buttons">
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
 				</div>
 				<div class="right">
@@ -19,7 +19,7 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 2</div>
 				</div>
 				<div class="right">
@@ -29,7 +29,7 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 3</div>
 				</div>
 				<div class="right">
@@ -37,116 +37,116 @@
 					<div class="restaurant_review">4.1</div>
 				</div>
 			</button>
-			<div class="restaurant_button">
+			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 4</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.2</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 5</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.8</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 6</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">3.7</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 7</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">2.5</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.5</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 2</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.9</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 3</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.1</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 4</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.2</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 5</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.8</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 6</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">3.7</div>
 				</div>
-			</div>
-			<div class="restaurant_button">
+			</button>
+			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="120"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
 					<div class="restaurant_name">RESTAURANT 7</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">2.5</div>
 				</div>
-			</div>
+			</button>
 		</div>
 	</body>
 </html>
