--- a/menu_page.html
+++ b/menu_page.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="menu.css">
+		<title>Main Menu</title>
 	</head>
+	<ul>
+		<li><a class="active" href="#Shopping Cart">Shopping Cart</a></li>
+		<li><a href="#Menus">Menus</a></li>
+		<li><a href="#Restaurants">Restaurants</a></li>
+		<li style="float:left"><a class="active" href="Company">Company</a></li>
+	</ul>
 </html>
