Finished restaurants page and made small adjustments on others

--- a/menu_page.html
+++ b/menu_page.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="menu.css">
+		<link rel="stylesheet" type="text/css" href="style/global_style.css">
+		<link rel="stylesheet" type="text/css" href="style/menu_style.css">
 		<title>Main Menu</title>
 	</head>
-	<ul>
-		<li><a class="active" href="#Shopping Cart">Shopping Cart</a></li>
-		<li><a href="#Menus">Menus</a></li>
-		<li><a href="#Restaurants">Restaurants</a></li>
-		<li style="float:left"><a class="active" href="Company">Company</a></li>
-	</ul>
+	<body>
+		<ul>
+			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
+			<li><a href="restaurants_list.html">Restaurants</a></li>
+			<li><a class="company_bar" href="index.html">Company Name</a></li>
+		</ul>
+	</body>
 </html>
