--- a/checkout.html
+++ b/checkout.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style/global_style.css">
+		<link rel="stylesheet" type="text/css" href="style/checkout_style.css">
 	</head>
+	<body>
+		<ul>
+			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
+			<li><a href="restaurants_list.html">Restaurants</a></li>
+			<li><a class="company_bar" href="index.html">Company Name</a></li>
+		</ul>
+	</body>
 </html>
