--- a/restaurants_list.html
+++ b/restaurants_list.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="style/global_style.css">
 		<link rel="stylesheet" type="text/css" href="style/restaurant_style.css">
 		<title>Restaurant List</title>
 	</head>
 	<body>
-		<div class="page_title">Restaurant List</div>
+		<ul>
+			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
+			<li><a class="active_item" href="restaurants_list.html">Restaurants</a></li>
+			<li><a class="company_bar" href="index.html">Company Name</a></li>
+		</ul>
+
 		<div class="buttons">
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
 				</div>
 				<div class="right">
@@ -19,7 +25,7 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 2</div>
 				</div>
 				<div class="right">
@@ -29,7 +35,7 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 3</div>
 				</div>
 				<div class="right">
@@ -39,7 +45,7 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 4</div>
 				</div>
 				<div class="right">
@@ -49,7 +55,7 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 5</div>
 				</div>
 				<div class="right">
@@ -59,7 +65,7 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 6</div>
 				</div>
 				<div class="right">
@@ -69,7 +75,7 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 7</div>
 				</div>
 				<div class="right">
@@ -79,8 +85,8 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
-					<div class="restaurant_name">RESTAURANT 1</div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="restaurant_name">RESTAURANT 8</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
@@ -89,8 +95,8 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
-					<div class="restaurant_name">RESTAURANT 2</div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="restaurant_name">RESTAURANT 9</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
@@ -99,8 +105,8 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
-					<div class="restaurant_name">RESTAURANT 3</div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="restaurant_name">RESTAURANT 10</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
@@ -109,8 +115,8 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
-					<div class="restaurant_name">RESTAURANT 4</div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="restaurant_name">RESTAURANT 11</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
@@ -119,8 +125,8 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
-					<div class="restaurant_name">RESTAURANT 5</div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="restaurant_name">RESTAURANT 12</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
@@ -129,8 +135,8 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
-					<div class="restaurant_name">RESTAURANT 6</div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="restaurant_name">RESTAURANT 13</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
@@ -139,8 +145,8 @@
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="100"></div>
-					<div class="restaurant_name">RESTAURANT 7</div>
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="restaurant_name">RESTAURANT 14</div>
 				</div>
 				<div class="right">
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
