Made changes to restaurnts list

--- a/restaurants_list.html
+++ b/restaurants_list.html
@@ -17,8 +17,13 @@
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
+					<div class="restaurant_address">Address</div>
+					<div class="restaurant_style">Italian</div>
+					<div class="restaurant_price">$10 - $40</div>
+					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
+					<div class="vertical_line"></div>
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.5</div>
 				</div>
