--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 			<li><a href="restaurants_list.html">Restaurants</a></li>
 			<li><a class="company_bar" href="index.html">Company Name</a></li>
 		</ul>
+		<div class="container">
+			<img class="background_img" src="images/home_background.png">
+			<div class="centered"><input type="text" placeholder="Search For Restaurant"></div>
+		</div>
 	</body>
 </html>
