--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 		<ul>
 			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
 			<li><a href="restaurants_list.html">Restaurants</a></li>
-			<li><a class="company_bar" href="index.html">Company Name</a></li>
+			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="20"></a></li>
 		</ul>
-		<div class="container">
-			<img class="background_img" src="images/home_background.png">
-			<div class="centered"><input type="text" placeholder="Search For Restaurant"></div>
+	<div class="welcome_header">
+		<h1>Welcome to bitchezzzz</h1>
+	</div>
+	<div class="wrap">
+		<div class ="searchbar">
+			<input type="text" class="searchterm" placeholder="Search for a Restaurant">
+			<button type="submit" class="searchbutton">
+			</button>
 		</div>
+	</div>
 	</body>
 </html>
