Starting code for checkout

--- a/checkout.html
+++ b/checkout.html
@@ -10,5 +10,8 @@
 			<li><a href="restaurants_list.html">Restaurants</a></li>
 			<li><a class="company_bar" href="index.html">Company Name</a></li>
 		</ul>
+		<div class="container">
+
+		</div>
 	</body>
 </html>
