--- a/restaurants_list.html
+++ b/restaurants_list.html
@@ -18,11 +18,26 @@
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
 					<div class="restaurant_address">Address</div>
+					<div class="vertical_line"></div>
+				</div>
+				<div class="right">
 					<div class="restaurant_style">Italian</div>
 					<div class="restaurant_price">$10 - $40</div>
 					<div class="vertical_line"></div>
+					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
+					<div class="restaurant_review">4.5</div>
+				</div>
+			</button>
+			<button class="restaurant_button">
+				<div class="left">
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="restaurant_name">RESTAURANT 1</div>
+					<div class="restaurant_address">Address</div>
+					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
+					<div class="restaurant_style">Italian</div>
+					<div class="restaurant_price">$10 - $40</div>
 					<div class="vertical_line"></div>
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.5</div>
@@ -31,69 +46,14 @@
 			<button class="restaurant_button">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 2</div>
+					<div class="restaurant_name">RESTAURANT 1</div>
+					<div class="restaurant_address">Address</div>
+					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
-					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">4.9</div>
-				</div>
-			</button>
-			<button class="restaurant_button">
-				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 3</div>
-				</div>
-				<div class="right">
-					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">4.1</div>
-				</div>
-			</button>
-			<button class="restaurant_button">
-				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 4</div>
-				</div>
-				<div class="right">
-					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">4.2</div>
-				</div>
-			</button>
-			<button class="restaurant_button">
-				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 5</div>
-				</div>
-				<div class="right">
-					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">4.8</div>
-				</div>
-			</button>
-			<button class="restaurant_button">
-				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 6</div>
-				</div>
-				<div class="right">
-					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">3.7</div>
-				</div>
-			</button>
-			<button class="restaurant_button">
-				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 7</div>
-				</div>
-				<div class="right">
-					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">2.5</div>
-				</div>
-			</button>
-			<button class="restaurant_button">
-				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 8</div>
-				</div>
-				<div class="right">
+					<div class="restaurant_style">Italian</div>
+					<div class="restaurant_price">$10 - $40</div>
+					<div class="vertical_line"></div>
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
 					<div class="restaurant_review">4.5</div>
 				</div>
@@ -101,61 +61,106 @@
 			<button class="restaurant_button">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 9</div>
+					<div class="restaurant_name">RESTAURANT 1</div>
+					<div class="restaurant_address">Address</div>
+					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
+					<div class="restaurant_style">Italian</div>
+					<div class="restaurant_price">$10 - $40</div>
+					<div class="vertical_line"></div>
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">4.9</div>
+					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 10</div>
+					<div class="restaurant_name">RESTAURANT 1</div>
+					<div class="restaurant_address">Address</div>
+					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
+					<div class="restaurant_style">Italian</div>
+					<div class="restaurant_price">$10 - $40</div>
+					<div class="vertical_line"></div>
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">4.1</div>
+					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 11</div>
+					<div class="restaurant_name">RESTAURANT 1</div>
+					<div class="restaurant_address">Address</div>
+					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
+					<div class="restaurant_style">Italian</div>
+					<div class="restaurant_price">$10 - $40</div>
+					<div class="vertical_line"></div>
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">4.2</div>
+					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 12</div>
+					<div class="restaurant_name">RESTAURANT 1</div>
+					<div class="restaurant_address">Address</div>
+					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
+					<div class="restaurant_style">Italian</div>
+					<div class="restaurant_price">$10 - $40</div>
+					<div class="vertical_line"></div>
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">4.8</div>
+					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 13</div>
+					<div class="restaurant_name">RESTAURANT 1</div>
+					<div class="restaurant_address">Address</div>
+					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
+					<div class="restaurant_style">Italian</div>
+					<div class="restaurant_price">$10 - $40</div>
+					<div class="vertical_line"></div>
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">3.7</div>
+					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
 			<button class="restaurant_button">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 14</div>
+					<div class="restaurant_name">RESTAURANT 1</div>
+					<div class="restaurant_address">Address</div>
+					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
+					<div class="restaurant_style">Italian</div>
+					<div class="restaurant_price">$10 - $40</div>
+					<div class="vertical_line"></div>
 					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">2.5</div>
+					<div class="restaurant_review">4.5</div>
+				</div>
+			</button>
+			<button class="restaurant_button">
+				<div class="left">
+					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="restaurant_name">RESTAURANT 1</div>
+					<div class="restaurant_address">Address</div>
+					<div class="vertical_line"></div>
+				</div>
+				<div class="right">
+					<div class="restaurant_style">Italian</div>
+					<div class="restaurant_price">$10 - $40</div>
+					<div class="vertical_line"></div>
+					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
+					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
 		</div>
