--- a/index.html
+++ b/index.html
@@ -11,14 +11,27 @@
 			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="20"></a></li>
 		</ul>
 	<div class="welcome_header">
-		<h1>Welcome to bitchezzzz</h1>
+		<h1>Welcome to fuck</h1>
 	</div>
-	<div class="wrap">
-		<div class ="searchbar">
-			<input type="text" class="searchterm" placeholder="Search for a Restaurant">
-			<button type="submit" class="searchbutton">
-			</button>
+	<form class="search-containers">
+		<div id="parent">
+			<div id="restaurant_search">
+				<input type="text" id="search-bar-restaurant" placeholder="Search for Restaurants">
+				<a href="#"><img class="search-icon-restaurant" src="images/search_icon.png"></a>
+			</div>
+		<div id="city_search">
+			<input type="text" id="search-bar-city" placeholder="Search for City">
+			<a href="#"><img class="search-icon-city" src="images/search_icon.png"></a>
 		</div>
+	</form>
+	<div class="selection-choices" style="width:200px;">
+		<select>
+			<option value="0">What meal will you be having today?</option>
+			<option value="1">Breakfast</option>
+			<option value="2">Lunch</option>
+			<option value="3">Dinner</option>
+			<option value="4">Other</option>
+		</select>
 	</div>
 	</body>
 </html>
