temp menu page, uses layout from restaurant page - provides similarity between pages which is optimal for users

--- a/menu_page.html
+++ b/menu_page.html
@@ -3,13 +3,114 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="style/global_style.css">
 		<link rel="stylesheet" type="text/css" href="style/menu_style.css">
-		<title>Main Menu</title>
+		<title>Menu Page</title>
 	</head>
 	<body>
 		<ul>
 			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
-			<li><a href="restaurants_list.html">Restaurants</a></li>
+			<li><a class="active_item" href="restaurants_list.html">Restaurants</a></li>
 			<li><a class="company_bar" href="index.html">Company Name</a></li>
 		</ul>
+		<div class="buttons">
+			<button class="menu_button">
+				<div class="left">
+					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="menu_name">Menu Item 1</div>
+					<div class="menu_address"></div>
+				</div>
+				<div class="right">
+					<div class="vertical_line"></div>
+					<div class="menu_review">$10</div>
+				</div>
+			</button>
+			<button class="menu_button">
+				<div class="left">
+					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="menu_name">Menu Item 1</div>
+					<div class="menu_address"></div>
+				</div>
+				<div class="right">
+					<div class="vertical_line"></div>
+					<div class="menu_review">$10</div>
+				</div>
+			</button>
+			<button class="menu_button">
+				<div class="left">
+					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="menu_name">Menu Item 1</div>
+					<div class="menu_address"></div>
+				</div>
+				<div class="right">
+					<div class="vertical_line"></div>
+					<div class="menu_review">$10</div>
+				</div>
+			</button>
+			<button class="menu_button">
+				<div class="left">
+					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="menu_name">Menu Item 1</div>
+					<div class="menu_address"></div>
+				</div>
+				<div class="right">
+					<div class="vertical_line"></div>
+					<div class="menu_review">$10</div>
+				</div>
+			</button>
+			<button class="menu_button">
+				<div class="left">
+					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="menu_name">Menu Item 1</div>
+					<div class="menu_address"></div>
+				</div>
+				<div class="right">
+					<div class="vertical_line"></div>
+					<div class="menu_review">$10</div>
+				</div>
+			</button>
+			<button class="menu_button">
+				<div class="left">
+					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="menu_name">Menu Item 1</div>
+					<div class="menu_address"></div>
+				</div>
+				<div class="right">
+					<div class="vertical_line"></div>
+					<div class="menu_review">$10</div>
+				</div>
+			</button>
+			<button class="menu_button">
+				<div class="left">
+					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="menu_name">Menu Item 1</div>
+					<div class="menu_address"></div>
+				</div>
+				<div class="right">
+					<div class="vertical_line"></div>
+					<div class="menu_review">$10</div>
+				</div>
+			</button>
+			<button class="menu_button">
+				<div class="left">
+					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="menu_name">Menu Item 1</div>
+					<div class="menu_address"></div>
+				</div>
+				<div class="right">
+					<div class="vertical_line"></div>
+					<div class="menu_review">$10</div>
+				</div>
+			</button>
+			<button class="menu_button">
+				<div class="left">
+					<div class="menu_img"><img src="images/Placeholder.png" width="80"></div>
+					<div class="menu_name">Menu Item 1</div>
+					<div class="menu_address"></div>
+				</div>
+				<div class="right">
+					<div class="vertical_line"></div>
+					<div class="menu_review">$10</div>
+				</div>
+			</button>
+		</div>
 	</body>
 </html>
