--- a/menu_page.html
+++ b/menu_page.html
@@ -11,5 +11,8 @@
 			<li><a href="restaurants_list.html">Restaurants</a></li>
 			<li><a class="company_bar" href="index.html">Company Name</a></li>
 		</ul>
+		<div class="container">
+			<h3 class="menu_title">Menu</h3>
+		</div>
 	</body>
 </html>
