Finished everything except cart page

--- a/checkout.html
+++ b/checkout.html
@@ -8,7 +8,7 @@
 		<ul>
 			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
 			<li><a href="restaurants_list.html">Restaurants</a></li>
-			<li><a class="company_bar" href="index.html">Company Name</a></li>
+			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="35"></a></li>
 		</ul>
 		<div class="container">
 			<div class="checkout_title">
@@ -34,6 +34,7 @@
 						<option value="credit">Credit</option>
 						<option value="cash">Cash</option>
 					</select>
+					<div class="total_cost">Total: $53.40</div>
 					<input type="submit" value="Order">
 				</form>
 			</div>
