--- a/menu_page.html
+++ b/menu_page.html
@@ -8,8 +8,8 @@
 	<body>
 		<ul>
 			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
-			<li><a class="active_item" href="restaurants_list.html">Restaurants</a></li>
-			<li><a class="company_bar" href="index.html">Company Name</a></li>
+			<li><a href="restaurants_list.html">Restaurants</a></li>
+			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="35"></a></li>
 		</ul>
 		<div class="buttons">
 			<button class="menu_button">
