--- a/restaurants_list.html
+++ b/restaurants_list.html
@@ -8,16 +8,19 @@
 	<body>
 		<ul>
 			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
-			<li><a class="active_item" href="restaurants_list.html">Restaurants</a></li>
-			<li><a class="company_bar" href="index.html">Company Name</a></li>
+			<li><a href="restaurants_list.html">Restaurants</a></li>
+			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="35"></a></li>
 		</ul>
-
+		<div class="restaurant_title">
+			<h2>Restaurants</h2>
+		</div>
 		<div class="buttons">
-			<button class="restaurant_button">
+			<button class="restaurant_button" id="restaurant_button_1">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
-					<div class="restaurant_address">Address</div>
+					<div class="restaurant_address">937 Albert St</div>
+					<div class="restaurant_hours">9am - 10pm</div>
 					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
@@ -28,11 +31,12 @@
 					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
-			<button class="restaurant_button">
+			<button class="restaurant_button" id="restaurant_button_2">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
-					<div class="restaurant_address">Address</div>
+					<div class="restaurant_address">937 Albert St</div>
+					<div class="restaurant_hours">9am - 10pm</div>
 					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
@@ -43,11 +47,12 @@
 					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
-			<button class="restaurant_button">
+			<button class="restaurant_button" id="restaurant_button_3">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
-					<div class="restaurant_address">Address</div>
+					<div class="restaurant_address">937 Albert St</div>
+					<div class="restaurant_hours">9am - 10pm</div>
 					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
@@ -58,11 +63,12 @@
 					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
-			<button class="restaurant_button">
+			<button class="restaurant_button" id="restaurant_button_4">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
-					<div class="restaurant_address">Address</div>
+					<div class="restaurant_address">937 Albert St</div>
+					<div class="restaurant_hours">9am - 10pm</div>
 					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
@@ -73,11 +79,12 @@
 					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
-			<button class="restaurant_button">
+			<button class="restaurant_button" id="restaurant_button_5">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
-					<div class="restaurant_address">Address</div>
+					<div class="restaurant_address">937 Albert St</div>
+					<div class="restaurant_hours">9am - 10pm</div>
 					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
@@ -88,11 +95,12 @@
 					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
-			<button class="restaurant_button">
+			<button class="restaurant_button" id="restaurant_button_6">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
-					<div class="restaurant_address">Address</div>
+					<div class="restaurant_address">937 Albert St</div>
+					<div class="restaurant_hours">9am - 10pm</div>
 					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
@@ -103,11 +111,12 @@
 					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
-			<button class="restaurant_button">
+			<button class="restaurant_button" id="restaurant_button_7">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
-					<div class="restaurant_address">Address</div>
+					<div class="restaurant_address">937 Albert St</div>
+					<div class="restaurant_hours">9am - 10pm</div>
 					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
@@ -118,11 +127,12 @@
 					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
-			<button class="restaurant_button">
+			<button class="restaurant_button" id="restaurant_button_8">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
-					<div class="restaurant_address">Address</div>
+					<div class="restaurant_address">937 Albert St</div>
+					<div class="restaurant_hours">9am - 10pm</div>
 					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
@@ -133,26 +143,12 @@
 					<div class="restaurant_review">4.5</div>
 				</div>
 			</button>
-			<button class="restaurant_button">
+			<button class="restaurant_button" id="restaurant_button_9">
 				<div class="left">
 					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
 					<div class="restaurant_name">RESTAURANT 1</div>
-					<div class="restaurant_address">Address</div>
-					<div class="vertical_line"></div>
-				</div>
-				<div class="right">
-					<div class="restaurant_style">Italian</div>
-					<div class="restaurant_price">$10 - $40</div>
-					<div class="vertical_line"></div>
-					<div class="restaurant_star"><img src="images/yellow-star.png" width="30"></div>
-					<div class="restaurant_review">4.5</div>
-				</div>
-			</button>
-			<button class="restaurant_button">
-				<div class="left">
-					<div class="restaurant_img"><img src="images/Placeholder.png" width="80"></div>
-					<div class="restaurant_name">RESTAURANT 1</div>
-					<div class="restaurant_address">Address</div>
+					<div class="restaurant_address">937 Albert St</div>
+					<div class="restaurant_hours">9am - 10pm</div>
 					<div class="vertical_line"></div>
 				</div>
 				<div class="right">
@@ -165,4 +161,5 @@
 			</button>
 		</div>
 	</body>
+	<script type="text/javascript" src="scripts.js"></script>
 </html>
