--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -6,9 +6,9 @@
 	</head>
 	<body>
 		<ul>
-			<li><a class="shopping_cart active_item" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
+			<li><a class="shopping_cart" href="shopping_cart.html"><img src="images/cart.png" height="35"></a></li>
 			<li><a href="restaurants_list.html">Restaurants</a></li>
-			<li><a class="company_bar" href="index.html">Company Name</a></li>
+			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="35"></a></li>
 		</ul>
 	</body>
 </html>
