Finished initial, will fix menu next lab

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -10,5 +10,28 @@
 			<li><a href="restaurants_list.html">Restaurants</a></li>
 			<li><a class="company_bar" href="index.html"><img src="images/uottawa_logo.png" height="35"></a></li>
 		</ul>
+		<div class="container">
+			<h3 class="shopping_title">Cart</h3>
+			<div class="item">
+				<div class="item_name">Food Item Name</div>
+				<div class="item_price">$4.99</div>
+				<div class="item_qty">Qty: 4</div>
+			</div>
+			<div class="item">
+				<div class="item_name">Food Item Name</div>
+				<div class="item_price">$8.99</div>
+				<div class="item_qty">Qty: 2</div>
+			</div>
+			<div class="item">
+				<div class="item_name">Food Item Name</div>
+				<div class="item_price">$1.99</div>
+				<div class="item_qty">Qty: 1</div>
+			</div>
+			<div class="horizontal_line"></div>
+			<div class="total_cost">Total: $39.33</div>
+			<button class="checkout_button" onclick='window.location.href = "checkout.html"'>
+				<div>Checkout</div>
+			</button>
+		</div>
 	</body>
 </html>
