--- a/checkout.html
+++ b/checkout.html
@@ -28,7 +28,7 @@
 					<input type="text" name="city" id="city_input" placeholder="Your city.." required>
 					<label for="postal_input">Postal Code</label>
 					<input type="text" name="postal" id="postal_input" placeholder="Your postal code.." required>
-					<label for="payment_method"></label>
+					<label for="payment_method">Payment Method</label>
 					<select id="payment_method" name="payment_method">
 						<option value="debit">Debit</option>
 						<option value="credit">Credit</option>
